<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="version"
            android:summary="v 1.0"
            android:title="当前版本" />
        <Preference
            android:key="share"
            android:title="@string/menu_share" />
        <Preference
            android:key="download"
            android:summary="打开地址下载最新版，复制链接给朋友"
            android:title="下载地址" />
    </PreferenceCategory>
    <PreferenceCategory android:title="关于作者">
        <Preference
            android:key="github"
            android:summary="@string/about_github"
            android:title="Github" />
    </PreferenceCategory>
    <PreferenceCategory android:title="版权">
        <Preference
            android:summary="无" />
    </PreferenceCategory>
</PreferenceScreen>